# sensitive-words-recognizer

./: Cargo.toml  README.md
src/: lib.rs
