[package]
name = "sensitive-words-recognizer-new"
version = "0.2.0"
authors = ["whiteCcinn <471113744@qq.com>", "Victor Teo <victor.teo@fillmula.com>"]
edition = "2021"
description = "A sensitive lexicon"
license = "MIT"
repository = "https://github.com/victorteokw/sensitive-words-recognizer"
keywords = ["sensitive"]
readme = "README.md"

[dependencies]
lazy_static="1.4.0"